--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,4 @@
-@import "./markdown.css";
-
-/* required for tailwind */
+@import "markdown.css";
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
